--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ body {
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: .1em;
-  background: var(--dark);
-  color: var(--light);
+  background: var(--light);
+  color: var(--dark);
   font-family: 'Poiret One', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -127,9 +127,9 @@ button[disabled] {
   opacity: .8;
 }
 
-img {
+/* img {
   max-width: 100%;
-}
+} */
 
 span[role="img"] {
   cursor: default;
@@ -163,6 +163,7 @@ nav a:hover {
 
 nav  li {
   cursor: pointer;
+  color: var(--light);
 }
 
 textarea {
@@ -299,4 +300,10 @@ a {
 
 .navActive {
   color: var(--secondary);
+}
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
