--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Fredericka the Great', cursive;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -163,7 +162,6 @@ header {
 header a {
   color: var(--light);
   font-size: 2.5rem;
-  font-family: 'Fredericka the Great', cursive;
   margin-bottom: 0;
 }
 
@@ -291,12 +289,14 @@ a {
 }
 .intro {
   font-size: 2rem;
-  font-family: 'Fredericka the Great', cursive;
   color: var(--tertiary);
 }
-/*Proyect Style*/
+/*Project Style*/
 .carousel .slide {
   background-color: var(--light);
+}
+.carousel .slide a span {
+  color: var(--light);
 }
 .carousel .slide .legend {
   background-color: var(--tertiary);
